<resources>
    <string name="app_name">PlantAnalyzer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Bt Handshake</string>
    <string name="second_fragment_label">Select Parameter</string>
    <string name="luminosity_label">Luminosity (lux)</string>
    <string name="humidity_label">Humidity (%)</string>
    <string name="temperature_label">Temperature (°C)</string>
    <string name="moisture_label">Moisture (%)</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="charts_name">ListView</string>
    <string-array name="array_charts">
        <item>Luminosity</item>
        <item>Humidity</item>
        <item>Temperature</item>
        <item>Moisture</item>
        <item>Image</item>
    </string-array>

</resources>